# Transitorios_AIoT

./: .gitignore
2_user_setting/: ClassILI9488.h  ILI9488_Pins.h
CrowPanel ESP32 HMI 4.3-inch Display/: Link.txt
CrowPanel ESP32 HMI 4.3-inch Display/ESP32S3 Dispaly 4.3 Module SCH+PCB Schematic/: CrowPanel ESP32 Display-4.3-inch-V2.1-20240314.brd  DXF_ESP32-S3-DevKitC-1_V1.1_20220429.dxf
CrowPanel ESP32 HMI 4.3-inch Display/Touch_Calibrate_2/: GFX_Class_Conf.h  config.h
CrowPanel ESP32 HMI 4.3-inch Display/Touch_Calibrate_3/: Touch_Calibrate_3.ino  touch.h
CrowPanel ESP32 HMI 4.3-inch Display/Touch_calibrate/: platformio.ini
CrowPanel ESP32 HMI 4.3-inch Display/Transitorios_AIoT-1/: Transitorios_AIoT-1.eez-project-ui-state  platformio.ini
CrowPanel ESP32 HMI 4.3inch Display/ESP32S3 Dispaly 4.3 Module SCH+PCB Schematic/: CrowPanel ESP32 Display-4.3-inch-V2.1-20240314.sch
CrowPanel ESP32 HMI 4.3inch Display/Touch_Calibrate_2/: LovyanGFX_Class_CrowPanel.h  Touch_Calibrate_2.ino
CrowPanel ESP32 HMI 4.3inch Display/Touch_Calibrate_3/: gfx_conf.h
CrowPanel ESP32 HMI 4.3inch Display/Transitorios_AIoT-1/: Transitorios_AIoT-1.eez-project  platformio.ini
CrowPanel_ESP32_4.3_PIO_Demo/: platformio.ini
CrowPanel_ESP32_4.3_PIO_Demo/include/: ui.h  ui_comp_hook.h  ui_events.h  ui_helpers.h
CrowPanel_ESP32_4.3_PIO_Demo/src/: main.cpp  ui.c  ui_comp_hook.c  ui_img_background_png.c  ui_img_on_png.c
ESP32/Transitorios_AIoT/: Transitorios_AIoT.eez-project  (+1 more)
ESP32/Transitorios_AIoT-1/: Transitorios_AIoT-1.eez-project  Transitorios_AIoT-1.eez-project-ui-state  platformio.ini
ESP32/Transitorios_AIoT-1 v(20241014)/: Transitorios_AIoT-1 v(20241014).eez-project  platformio.ini
ESP32/Transitorios_AIoT-1 v(20241112)/: .gitignore
RPi2040/AIoT_RP2040v2/: CMakeLists.txt  CMakePresets.json  parpadeo_led.c
RPi2040/AIoT_RP2040v2/driver-libraries/Arduino/: wiring_digital.cpp  wiring_private.cpp
RPi2040/Transitorios_AIoT_RPi2040-2/ui/: CMakeLists.txt  actions.h  eez-flow-lz4.c  filelist.txt  fonts.h  images.h  screens.h  ui.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/: .project  CMakeLists-Pico.txt  CMakeLists-PicoW.txt  CMakeLists.txt  README.md  build-PicoW.bat  lv_conf.h  main.cpp
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/driver-libraries/Arduino/: Arduino.h  SPI.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/driver-libraries/TFT_eSPI/: User_Setup.h  User_Setup_Select.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/driver-libraries/TFT_eSPI/Processors/: TFT_eSPI_RP2040.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/eez-framework/: THIRD-PARTY-LICENSES.TXT
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/eez-framework/src/eez/core/: assets.h  memory.h  value.cpp  value.h  value_types.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/eez-framework/src/eez/flow/: components.cpp  flow.cpp  flow.h  operations.cpp  private.cpp  private.h  queue.cpp  queue.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/eez-framework/src/eez/flow/components/: call_action.cpp  compare.cpp  counter.cpp  delay.cpp  error.cpp  expr_eval.cpp  is_true.cpp  log.cpp  loop.cpp  select_language.cpp  set_variable.cpp  switch.cpp
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/eez-framework/src/eez/gui/: gui.cpp  gui.h
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/eez-framework/src/eez/gui/widgets/: button.cpp  button.h  button_group.cpp
RPi2040/Transitorios_AIoT_RPi2040/PPi2040/ui/: actions.h  fonts.h  images.h  screens.h  styles.h  ui.c  ui.h
Transitorios_AIoT/: Transitorios_AIoT.eez-project  Transitorios_AIoT.eez-project-ui-state  platformio.ini
Transitorios_AIoT-1/: Transitorios_AIoT-1.eez-project  Transitorios_AIoT-1.eez-project-ui-state  platformio.ini
Transitorios_AIoT-v(20240820_1701)/: Transitorios_AIoT-1.eez-project
Transitorios_AIoT-v(HMS)/: Transitorios_AIoT-HMS.eez-project  platformio.ini
Transitorios_AIoT-v9_2/: platformio.ini
Transitorios_AIoT_RPi2040-1/: platformio.ini
include/: display_service.cpp  io_service.cpp  loop_Task.cpp  loop_Task.h
(+229 files in other folders)
